target_sources(core
    PRIVATE
        count_novelty_heuristic.hxx
        count_novelty_partition.hxx
        node_novelty_spaces.hxx
        novelty.hxx
        approximate_novelty.hxx
        approximate_novelty_partition_1.hxx
        approximate_novelty_partition_2.hxx
        novelty_partition.hxx
        novelty_partition_1.hxx
        novelty_partition_2.hxx
        count_novelty_sa_partition.hxx
)

target_include_directories(core
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)

install(
    FILES
        count_novelty_heuristic.hxx
        count_novelty_partition.hxx
        node_novelty_spaces.hxx
        novelty.hxx
        approximate_novelty.hxx
        approximate_novelty_partition_1.hxx
        approximate_novelty_partition_2.hxx
        novelty_partition.hxx
        novelty_partition_1.hxx
        novelty_partition_2.hxx
        count_novelty_sa_partition.hxx
    DESTINATION
        ${CMAKE_INSTALL_PREFIX}/lapkt/core/include/node_eval/novelty
    COMPONENT
        lapkt 
)